syntax = "proto3";
option go_package = "../service";
package service;

service NodeService{
    rpc Phase1Getstart(RequestMsg)  returns (ResponseMsg) {}
    rpc Phase1SendPointMsg (PointMsg)    returns (ResponseMsg){}
    rpc Phase2Share(ZeroMsg)    returns(ResponseMsg){}
    rpc Phase2Verify(CommitMsg) returns(ResponseMsg){}

}

message RequestMsg{}

message ResponseMsg{}

message PointMsg{
    int32 index  = 1;
    bytes x = 2;
    bytes y = 3;
    bytes witness = 4;
}
message ZeroMsg{
    int32 index = 1 ;
    bytes share = 2 ;
}
message CommitMsg{
    int32 Index = 1;
    bytes ShareCommit = 2;
    bytes PolyCommit = 3;
    bytes ZeroWitness = 4;
}